--- a/index.html
+++ b/index.html
@@ -37,17 +37,35 @@
         </div>
     </header>
 
-    <nav class="menu">
-        <a href="mayoria/Computadores.html">Computadoras</a>
-        <a href="mayoria/tabletas.html">Tabletas <br> Gráficas</a>
-        <a href="mayoria/SoftwareFreeDesign.html">Programas <br> Gratuitos Diseño</a>
-        <a href="mayoria/programacion.html">Programación</a>
-        <a href="mayoria/licenciasDesign.html">Licencias de <br> Programas Diseño</a>
-        <!--bb8f439 (Separacion css y html)-->
-    </nav>
+<nav class="navbar navbar-expand-lg menu">
+    <div class="container">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav mx-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="mayoria/Computadores.html">Computadoras</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="mayoria/tabletas.html">Tabletas Gráficas</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="mayoria/SoftwareFreeDesign.html">Programas Gratuitos de Diseño</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="mayoria/programacion.html">Programación</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="mayoria/licenciasDesign.html">Licencias de Programas de Diseño</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
 
-    <!-- Carrusel -->
-    <div class="carrusel-container py-5">
+<!-- Carrusel -->
+<div class="carrusel-container py-5">
         <div id="carruselPrincipal" class="carousel slide" data-bs-ride="carousel">
             <!-- Indicadores -->
             <div class="carousel-indicators">
@@ -79,10 +97,10 @@
                 <span class="carousel-control-next-icon"></span>
             </button>
         </div>
-    </div>
+</div>
 
-    <!-- Sección destacados -->
-    <section class="destacados">
+<!-- Sección destacados -->
+<section class="destacados">
         <h2 class="titulo-destacados">&#9733; DESTACADOS &#9733;</h2>
         <div class="carrusel-destacados">         
             <div class="productos d-flex gap-3 flex-wrap justify-content-center container-fluid">
@@ -115,30 +133,26 @@
             </div>        
             
         </div>
-    </section>
+</section>
 
-    <!-- Footer -->
-     <footer class="custom-footer">
-        <section class="contenidoFooter d-flex justify-content-between"> <!--Esto ultimo permite usar felxbox para alinear elementos-->
-            <div class="nombresIntegrantes">
-                <h4>Diana Sofia Benavides Monroy.  Código: 55823004
-                    <br>
-                    Hugo Alexander Fonseca Chaparro.   Código: 55822501
-                    <br>
-                    Juan Manuel Torres Celis         Código: 55823018
-                </h4>
-            </div>
-          <!--bb8f439 (Separacion css y html)-->
-          <div class="info">
-             <h2>MULTI STAND</h2>
-             <img class="logoFooter" src="img/aprendizaje-electronico.png" alt="logoMultiStand">
-             <h5>Repositorio del Ingeniero Multimedia</h5>
-             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-          </div>
-        </section>
+<!-- Footer -->
+<footer class="custom-footer">
+    <div class="nombresIntegrantes">
+        <p class="Estudiante">Diana Sofia Benavides Monroy.  Código: 55823004</p>
+        <p class="Estudiante">Hugo Alexander Fonseca Chaparro.  Código: 55822501 </p>
+        <p class="Estudiante">Juan Manuel Torres Celis. Código: 55823018 </p>
+    </div>
+
+    <div >
         <p class="textoFooter">&copy; 2025 MULTI STAND</p>
-     </footer>
+    </div>
 
+    <div class="info">
+        <h1 class="TituloFooter">MULTI STAND</h1>
+        <img class="logoFooter" src="img/aprendizaje-electronico.png" alt="logoMultiStand">
+        <p class="textoFooter2">Repositorio del Ingeniero Multimedia</p>
+     </div>
+</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
