--- a/mayoria/programacion.html
+++ b/mayoria/programacion.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="../css/Programacion.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="icon" href="../img/Icono para la pestaña.png">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>Programacion</title>
 </head>
 <body>
@@ -64,8 +66,12 @@
             </div>
         </div>
     </nav>
-
-    <main class="ProgramacionSoftwaresContainer mt-4">
+    <div class="TituloPage">
+        <h1 class="TextTitulo">
+            Entornos de Desarrollo Integrado (IDE)
+        </h1>
+    </div>
+    <main class="ProgramacionSoftwaresContainer mt-2 mb-2">
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <!-- Card VSC -->
             <div class="col">
