--- a/mayoria/tabletas.html
+++ b/mayoria/tabletas.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabletas Gráficas - MultiStand</title>
-    <link rel="icon" href="img/Icono para la pestaña.png">
+    <link rel="icon" href="../img/Icono para la pestaña.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/global.css">
     <link rel="stylesheet" href="../css/tabletas.css">
@@ -40,13 +40,32 @@
         </div>
     </header>
 
-    <nav class="menu">
-        <a href="Computadores.html">Computadoras</a>
-        <a href="tabletas.html">Tabletas <br> Gráficas</a>
-        <a href="SoftwareFreeDesign.html">Programas <br> Gratuitos Diseño</a>
-        <a href="programacion.html">Programación</a>
-        <a href="licenciasDesign.html">Licencias de <br> Programas Diseño</a>
-    </nav>
+<nav class="navbar navbar-expand-lg menu">
+    <div class="container">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav mx-auto">
+               <li class="nav-item">
+                    <a class="nav-link" href="../mayoria/Computadores.html">Computadoras</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../mayoria/tabletas.html">Tabletas Gráficas</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../mayoria/SoftwareFreeDesign.html">Programas Gratuitos de Diseño</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../mayoria/programacion.html">Programación</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../mayoria/licenciasDesign.html">Licencias de Programas de Diseño</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
 
     <section class="espacioFondoTituloCat">
         <h1 class="tituloCategoria">💻 TABLETAS GRÁFICAS </h1>
@@ -55,12 +74,12 @@
     <section class="productos">
 
 
-        <div class="producto">
+<div class="producto">
             <a href="../informacion/informTablets/informTab1.html">
                 <img src="../img/WACOMIntuosProMediana.PNG" alt="WACOM Intuos Pro Mediana">
             </a>
             <h3>WACOM Intuos Pro Mediana</h3>
-        </div> <!--https://www.ktronix.com/tableta-grafica-wacom-intuos-pro-mediana-bluetooth-pth660/p/753218988270-->
+</div> <!--https://www.ktronix.com/tableta-grafica-wacom-intuos-pro-mediana-bluetooth-pth660/p/753218988270-->
 
         <div class="producto">
             <a href="../informacion/informTablets/informTab2.html">
@@ -98,28 +117,24 @@
         </div>
     </section>
 
-    <!-- Footer -->
-    <footer class="custom-footer">
-        <section class="contenidoFooter d-flex justify-content-between">
-            <!--Esto ultimo permite usar felxbox para alinear elementos-->
-            <div class="nombresIntegrantes">
-                <h4>Diana Sofia Benavides Monroy. Código: 55823004
-                    <br>
-                    Hugo Alexander Fonseca Chaparro. Código: 55822501
-                    <br>
-                    Juan Manuel Torres Celis Código: 55823018
-                </h4>
-            </div>
-            <!--bb8f439 (Separacion css y html)-->
-            <div class="info">
-                <h2>MULTI STAND</h2>
-                <img class="logoFooter" src="../img/aprendizaje-electronico.png" alt="logoMultiStand">
-                <h5>Repositorio del Ingeniero Multimedia</h5>
-                <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-            </div>
-        </section>
+<!-- Footer -->
+<footer class="custom-footer">
+    <div class="nombresIntegrantes">
+        <p class="Estudiante">Diana Sofia Benavides Monroy.  Código: 55823004</p>
+        <p class="Estudiante">Hugo Alexander Fonseca Chaparro.  Código: 55822501 </p>
+        <p class="Estudiante">Juan Manuel Torres Celis. Código: 55823018 </p>
+    </div>
+
+    <div >
         <p class="textoFooter">&copy; 2025 MULTI STAND</p>
-    </footer>
+    </div>
+
+    <div class="info">
+        <h1 class="TituloFooter">MULTI STAND</h1>
+        <img class="logoFooter" src="../img/aprendizaje-electronico.png" alt="logoMultiStand">
+        <p class="textoFooter2">Repositorio del Ingeniero Multimedia</p>
+     </div>
+</footer>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
