--- a/mayoria/licenciasDesign.html
+++ b/mayoria/licenciasDesign.html
@@ -106,7 +106,7 @@
             <a href="https://www.adobe.com/co/products/aftereffects.html" target="_blank">
                 <img src="../Img_Licencias/After Effects.jpeg" alt="ASUS TUF">
             </a>
-            <h3>Windows 11 Pro + Office 2021</h3> 
+            <h3> Adobe After Effects </h3> 
         </div>
         
         <div class="producto">
